plugins {
    id 'java'
}

repositories {
    mavenLocal()
    maven { url = 'https://repo.runelite.net' }
    mavenCentral()
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'com.mvpitsolutions.rooftopcamera.RooftopCameraPluginTest'

dependencies {
    compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion
    testImplementation 'junit:junit:4.13.2'
    testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
}

group = 'com.mvpitsolutions.rooftopcamera'
version = '0.1.2'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.register('run', JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    mainClass = pluginMainClass
    jvmArgs '-ea', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
    args '--developer-mode', '--debug'
}
